# semiconinterp

./: .antigravityignore  .gitignore  LICENSE  README.md  model_exp.excalidraw  pipeline.py  pyproject.toml
data/: headers.npy  pca_matrix_20k_6.npy
data/noisy/pca_artifacts/: mu_scaler_bridge.npy  scaler_mean_bridge.npy  std_scaler_bridge.npy
data/splits/: split_test_idx.npy  split_train_idx.npy
data/without_noise/pca_artifacts/: V_pca_bridge.npy  pca_score_scaler_params.npz
data/without_noise/splits/: split_val_idx.npy
notebooks/: piae_6.py  piae_final_v1.py
outputs/checkpoints/: cvae_v5_physics_supervised_final.pt  piae_v3_s21_final.pt
outputs/csv/cvae/: cvae_parity_test.csv  cvae_v5_decoder_validation__sample1.csv  cvae_v5_decoder_validation__sample2.csv  cvae_v5_decoder_validation__sample3.csv  cvae_v5_posterior_uncertainty.csv  cvae_v5_training_curves.csv
outputs/csv/data/: pca_correlation_heatmap.csv  pca_correlation_heatmap_30pc.csv  pca_scree_plot.csv
outputs/csv/interp/cvae/: cvae_crosstalk_matrix.csv  cvae_encoder_crosstalk__norm.csv  cvae_encoder_crosstalk__raw.csv  cvae_fidelity_by_regime.csv  cvae_ig_band_breakdown.csv  cvae_ig_heatmap.csv  (+9 more)
outputs/csv/piae/: piae_decoder_validation__sample1.csv  piae_decoder_validation__sample2.csv  piae_decoder_validation__sample3.csv  piae_parity_test.csv  piae_training_curves.csv
outputs/noisy/checkpoints/: cvae_v5_physics_supervised_final.pt
src/: csv_utils.py  cvae_model.py  data_processing.py  interp_extension.py  interpretability.py  piae_model.py
supplementary/: data_gen.py  z_from_ssec.m
(+47 files in other folders)
