[project]
name = "semicon-exp"
version = "0.1.0"
description = "Row-sampled line and polar dashboard plotting for semiconductor training data"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
]

[tool.uv]
package = false
